--- a/fig/nginx/evething.conf
+++ b/fig/nginx/evething.conf
@@ -5,12 +5,12 @@ server {
 
     # https://docs.djangoproject.com/en/dev/howto/static-files/#serving-static-files-in-production
     location /static/ { # STATIC_URL
-        alias /opt/evething/static/; # STATIC_ROOT
+        alias /var/lib/evething/static/; # STATIC_ROOT
         expires 30d;
     }
 
     location /media/ { # MEDIA_URL
-        alias /opt/evething/static/; # MEDIA_ROOT
+        alias /var/lib/evething/static/; # MEDIA_ROOT
         expires 30d;
     }
 
