This is not a secret key.

--- a/fig/fig.yml
+++ b/fig/fig.yml
@@ -5,7 +5,7 @@ web:
     environment:
         ADMIN_NAME: Administrator
         ADMIN_EMAIL: someone@somewhere.com
-        SECRET_KEY: "z30v^d(e(ka5h-kxpo2#ne7fey%ks9lws!4yy+=yhy+b-6(z!0"
+        SECRET_KEY: "change this"
     links:
         - db
         - mail
