More fig -> compose stuff.

--- a/compose/nginx/evething.conf
+++ b/compose/nginx/evething.conf
@@ -16,7 +16,7 @@ server {
 
     location / {
         include fastcgi_params;
-        fastcgi_pass fig_web_1:8080;
+        fastcgi_pass compose_web_1:8080;
     }
 }
 
